--- a/index.html
+++ b/index.html
@@ -405,7 +405,27 @@ with cross-functional teams to design system enhancements.</li>
 			  <p>Below are the sample Data Analytics projects on SQL, Python, Tableau, Power BI & ML.</p>
 			</div>
 		  </div>
-		  
+		  <div class="row">
+  <!-- Power BI Project: SAP Cloud Analytics - ERP Simulation & Data Analysis -->
+  <div class="col-md-4 d-flex ftco-animate">
+    <div class="blog-entry">
+      <a href="images/Cloudanalytics.docx" class="block-20 zoom-effect" 
+         style="background-image: url('images/SAP.png');" 
+         target="_blank">
+      </a>
+      <div class="text mt-3 d-block">
+        <h3 class="heading">
+          <a href="images/Cloudanalytics.docx" target="_blank">
+            SAP Cloud Analytics - ERP Simulation & Data Analysis
+          </a>
+        </h3>
+        <p>Implemented an ERP simulation analysis using SAP Cloud Analytics to extract actionable insights from sales and revenue data. Applied Benford’s Law with SAP Predictive Analytics to detect anomalies and ensure data integrity in financial reports. This project demonstrates my ability to leverage SAP tools for data-driven decision-making and accuracy.</p>
+        <p>
+          <a href="images/Cloudanalytics.docx" target="_blank">Click here to download the project details and analysis.</a>
+        </p>
+      </div>
+    </div>
+  </div>
 		  <div class="row d-flex g-4">
 			<!-- First Project -->
 			<div class="col-md-4 d-flex ftco-animate">
@@ -602,27 +622,22 @@ with cross-functional teams to design system enhancements.</li>
 		</div>
 	  </section>
 	</div>
-<div class="row">
-  <!-- Power BI Project: SAP Cloud Analytics - ERP Simulation & Data Analysis -->
-  <div class="col-md-4 d-flex ftco-animate">
-    <div class="blog-entry">
-      <a href="images/Cloudanalytics.docx" class="block-20 zoom-effect" 
-         style="background-image: url('images/SAP.png');" 
-         target="_blank">
-      </a>
-      <div class="text mt-3 d-block">
-        <h3 class="heading">
-          <a href="images/Cloudanalytics.docx" target="_blank">
-            SAP Cloud Analytics - ERP Simulation & Data Analysis
-          </a>
-        </h3>
-        <p>Implemented an ERP simulation analysis using SAP Cloud Analytics to extract actionable insights from sales and revenue data. Applied Benford’s Law with SAP Predictive Analytics to detect anomalies and ensure data integrity in financial reports. This project demonstrates my ability to leverage SAP tools for data-driven decision-making and accuracy.</p>
-        <p>
-          <a href="images/Cloudanalytics.docx" target="_blank">Click here to download the project details and analysis.</a>
-        </p>
-      </div>
-    </div>
-  </div>
+<div class="row d-flex g-4">
+			<!-- First Project -->
+			<div class="col-md-4 d-flex ftco-animate">
+			  <div class="blog-entry justify-content-end">
+				<a href="https://public.tableau.com/app/profile/anand.bhagat/viz/Netflixprojectanand/Dashboard1" class="block-20 zoom-effect" style="background-image: url('images/proj_1.png');">
+				</a>
+				<div class="text mt-3 d-block">
+				  <h3 class="heading">
+					<a href="https://public.tableau.com/app/profile/anand.bhagat/viz/Netflixprojectanand/Dashboard1">
+					  Netflix Movies & TV Shows Analysis Using Tableau
+					</a>
+				  </h3>
+				  <p>Created a Tableau dashboard analyzing Netflix’s movie and TV show data, providing insights into top genres, global content distribution, release trends, and content types.</p>
+				</div>
+			  </div>
+			</div>
 
   <!-- Titanic Association Analysis Using SAP Analytics Cloud -->
   <div class="col-md-4 d-flex ftco-animate">
