--- a/index.html
+++ b/index.html
@@ -397,7 +397,8 @@ with cross-functional teams to design system enhancements.</li>
     </section>
 
 	<section class="ftco-section" id="project-section">
-		<div class="container">
+		 <div class="container-fluid">
+
 		  <div class="row justify-content-center mb-5 pb-5">
 			<div class="col-md-7 heading-section text-center ftco-animate">
 			  <h1 class="big big-2">Projects</h1>
