--- a/index.html
+++ b/index.html
@@ -562,7 +562,8 @@ with cross-functional teams to design system enhancements.</li>
 <section>
 	<div class="row d-flex justify-content-center">
 	  <section class="ftco-section">
-		<div class="container">
+		<div class="container-fluid">
+
 		  <div class="row d-flex flex-wrap">
 			
 			<!-- AWS Project: Netflix Data Analysis using AWS S3 -->
