--- a/index.html
+++ b/index.html
@@ -701,7 +701,8 @@ with cross-functional teams to design system enhancements.</li>
 
 <!-- Volunteer Section Start -->
 <section class="ftco-section" id="volunteering-section">
-  <div class="container">
+ <div class="container-fluid">
+
     <div class="row justify-content-center mb-5 pb-5">
       <div class="col-md-7 heading-section text-center ftco-animate">
         <h1 class="big big-2">Volunteering</h1>
