--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 									<li class="d-flex"><span>Language:</span> <span>English</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span> SAP Analytics Cloud (SAC),SAP Business Objects, Tableau, Power BI, SPSS, SAS Visual Analytics</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>SAP ABAP, SAP/S4HANA, Python, SQL, Java, C/C++, HTML/CSS, MySQL, Cybersecurity Tools (Nmap, OpenVAS, Kali Linux)&amp; Excel (VBA macros)</span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Videography, Teaching</span></li>
+									<li class="d-flex"><span>Interest:</span> <span>Traveling,Videography,Teaching, Content Creator</span></li>
 									
 								</ul>
 							</div>
