--- a/index.html
+++ b/index.html
@@ -697,7 +697,9 @@ with cross-functional teams to design system enhancements.</li>
   </div>
 </div>
 </section>
-
+</div> 
+</div> 
+</section>
 <!-- Volunteer Section Start -->
 <section class="ftco-section" id="volunteering-section">
  <div class="container-fluid">
