--- a/index.html
+++ b/index.html
@@ -671,6 +671,9 @@ with cross-functional teams to design system enhancements.</li>
 
 	</div>
   </div>
+				<section class="ftco-section">
+  <div class="container">
+    <div class="row">
 	<section>
   
 	<!-- Craft Haven E-Commerce Platform -->
