--- a/index.html
+++ b/index.html
@@ -678,10 +678,9 @@ with cross-functional teams to design system enhancements.</li>
 </section> <!-- CLOSE last #project-section -->
 
 
-<!-- 🛠 Start a New Section for Craft Haven -->
 <section class="ftco-section" id="craft-haven-section">
   <div class="container">
-    <div class="row">
+    <div class="row"> <!-- NO justify-content-center -->
 
       <!-- Craft Haven E-Commerce Platform -->
       <div class="col-md-4 d-flex ftco-animate">
@@ -689,8 +688,7 @@ with cross-functional teams to design system enhancements.</li>
           <a href="https://drive.google.com/drive/folders/15HF3-yUl1w1EOvhOvSBYZObbx8bK8Y3h" 
              class="block-20 zoom-effect" 
              style="background-image: url('images/craft-haven.webp');" 
-             target="_blank">
-          </a>
+             target="_blank"></a>
           <div class="text mt-3 d-block">
             <h3 class="heading">
               <a href="https://drive.google.com/drive/folders/15HF3-yUl1w1EOvhOvSBYZObbx8bK8Y3h" target="_blank">
@@ -707,11 +705,10 @@ with cross-functional teams to design system enhancements.</li>
         </div>
       </div>
 
-      <!-- 🛠 You can add more projects here inside same row if needed -->
-
     </div> <!-- CLOSE row -->
   </div> <!-- CLOSE container -->
-</section> <!-- CLOSE Craft Haven section -->
+</section>
+
 
 <!-- Volunteer Section Start -->
 <section class="ftco-section" id="volunteering-section">
