--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 									      As a SAP (TS410 Business Process Integration Certified professional), I excel in leveraging advanced tools like Python, Power BI, Tableau, and SAP Cloud Analytics to streamline business processes and deliver impactful insights. From AI-driven research influencing military strategies to optimizing enterprise operations, I thrive on harnessing information to drive innovation, efficiency, and value across diverse domains.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span></li>
-									<li class="d-flex"><span>Domain:</span> <span>Business Intelligence, Data Analytics, Enterprise Systems, Supply Chain Management, Information Security, Military Technology</span></li>
+									<li class="d-flex"><span>Domain:</span> <span> SAP ERP Systems, SAP Business Process Integration,Business Intelligence, Data Analytics, Enterprise Systems, Supply Chain Management, Information Security, Military Technology</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Master of Science in Management Information Systems</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span> SAP Analytics Cloud (SAC),SAP Business Objects, Tableau, Power BI, SPSS, SAS Visual Analytics</span></li>
