--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@ with cross-functional teams to design system enhancements.</li>
     </a>
     <div class="text mt-3 d-block">
       <h3 class="heading">Cybersecurity Session at Martin Elementary</h3>
-      <p>On February 9, 2024, we conducted a hands-on cybersecurity session at Martin Elementary School, teaching students how to create strong passwords by focusing on the importance of using uppercase letters, lowercase letters, numbers, and special characters. To make learning interactive and fun, I demonstrated how students could temporarily personalize their school website by changing the title to their own names, introducing them to the basics of website development and understanding web page structures.</p>
+      <p>On February 9, 2024, we conducted a hands-on cybersecurity session at Martin Elementary School, teaching students how to create strong passwords by focusing on the importance of using uppercase letters, lowercase letters, numbers, and special characters. To make learning interactive and fun, I demonstrated how students could temporarily personalize their school website by changing the title to their own names, introducing them to the basics of website development and understanding web page structures. Picture(Damon), an 8-year-old third-grader</p>
     </div>
   </div>
 </div>
