--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@ with cross-functional teams to design system enhancements.</li>
 			<div class="col-md-12 text-center">
   
 			  <p><!-- -->
-	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+	 ;<script>document.write(new Date().getFullYear());</script>  | <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 	<!-. --></p>
 			</div>
 		  </div>
