--- a/index.html
+++ b/index.html
@@ -707,6 +707,38 @@ with cross-functional teams to design system enhancements.</li>
 
     </div> <!-- CLOSE row -->
   </div> <!-- CLOSE container -->
+	<div class="col-md-4 d-flex ftco-animate">
+        <div class="blog-entry">
+          <a href="https://public.tableau.com/views/Dataanalyticsprojectfinal/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" 
+             class="block-20 zoom-effect" 
+             style="background-image: url('images/Tesla.png');" 
+             target="_blank"></a>
+          <div class="text mt-3 d-block">
+            <h3 class="heading">
+              <a href="https://public.tableau.com/views/Dataanalyticsprojectfinal/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">
+                Tesla vs. Ford (2017–2023): Innovation Outpaces Legacy
+              </a>
+            </h3>
+            <p>This project analyzes the financial performance of Tesla and Ford between 2017 and 2023, focusing on their R&D investment, gross margin, net income, and vehicle production costs. The aim was to compare Tesla's innovation-driven model with Ford's legacy approach to understand the competitive edge Tesla holds in the electric vehicle (EV) space.</p>
+            <p>Key Findings:
+              <ul>
+                <li>Tesla's significant investments in R&D have allowed them to maintain a strong market position despite higher production costs.</li>
+                <li>Ford's legacy systems and lower R&D spending have kept them behind in terms of profitability and market adaptability.</li>
+                <li>Tesla's focus on innovation is paying off with strong margins and growth, while Ford struggles to catch up in the EV sector.</li>
+              </ul>
+            </p>
+            <p>
+              <a href="https://docs.google.com/document/d/1whsykJRFmOB8GEwMxUx-UXFYYGWBs2Ej/edit?usp=sharing&ouid=102117268856523270424&rtpof=true&sd=true" target="_blank">
+                Click here to access the project details and findings.
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div> <!-- CLOSE row -->
+  </div> <!-- CLOSE container -->
+</section>
 </section>
 
 
