--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@ with cross-functional teams to design system enhancements.</li>
     <div class="row"> <!-- NO justify-content-center -->
 
       <!-- Craft Haven E-Commerce Platform -->
-      <div class="col-md-4 d-flex ftco-animate">
+      <div class="col-md-6 d-flex ftco-animate">
         <div class="blog-entry">
           <a href="https://drive.google.com/drive/folders/15HF3-yUl1w1EOvhOvSBYZObbx8bK8Y3h" 
              class="block-20 zoom-effect" 
@@ -705,9 +705,8 @@ with cross-functional teams to design system enhancements.</li>
         </div>
       </div>
 
-    </div> <!-- CLOSE row -->
-  </div> <!-- CLOSE container -->
-	<div class="col-md-4 d-flex ftco-animate">
+      <!-- Tesla vs. Ford Project -->
+      <div class="col-md-6 d-flex ftco-animate">
         <div class="blog-entry">
           <a href="https://public.tableau.com/views/Dataanalyticsprojectfinal/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" 
              class="block-20 zoom-effect" 
@@ -738,7 +737,6 @@ with cross-functional teams to design system enhancements.</li>
 
     </div> <!-- CLOSE row -->
   </div> <!-- CLOSE container -->
-</section>
 </section>
 
 
