--- a/index.html
+++ b/index.html
@@ -715,15 +715,16 @@ with cross-functional teams to design system enhancements.</li>
           <div class="text mt-3 d-block">
             <h3 class="heading">
               <a href="https://public.tableau.com/views/Dataanalyticsprojectfinal/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">
-                Tesla vs. Ford (2017–2023): Innovation Outpaces Legacy
+                Tesla vs. Ford (2017–2023): Innovation Outpaces Legacy 
+		      <p>Clicking on the image will redirect you to the Tableau visualization, hosted on Tableau Cloud, where you can explore an interactive analysis of both companies’ financials and innovation metrics in more detail.</p>
               </a>
             </h3>
-            <p>This project analyzes the financial performance of Tesla and Ford between 2017 and 2023, focusing on their R&D investment, gross margin, net income, and vehicle production costs. The aim was to compare Tesla's innovation-driven model with Ford's legacy approach to understand the competitive edge Tesla holds in the electric vehicle (EV) space.</p>
-            <p>Key Findings:
+            <p>This project compares Tesla and Ford's financial performance from 2017 to 2023, with a focus on R&D investment, gross margin, and vehicle production costs. The goal was to assess how Tesla's innovation-driven strategy outpaces Ford's legacy approach, especially in the EV sector.</p>
+            <p>Key Insights:
               <ul>
-                <li>Tesla's significant investments in R&D have allowed them to maintain a strong market position despite higher production costs.</li>
-                <li>Ford's legacy systems and lower R&D spending have kept them behind in terms of profitability and market adaptability.</li>
-                <li>Tesla's focus on innovation is paying off with strong margins and growth, while Ford struggles to catch up in the EV sector.</li>
+                <li>Tesla's heavy R&D investments have supported its growth and market leadership despite higher production costs.</li>
+                <li>Ford’s lower R&D spending has hindered its ability to compete effectively in the EV market.</li>
+                <li>Innovation has been a key driver in Tesla’s profitability and market success, outpacing Ford’s adaptation efforts.</li>
               </ul>
             </p>
             <p>
