--- a/index.html
+++ b/index.html
@@ -322,36 +322,56 @@
 		</div>
 		<br>
 		
-		<div class="row">
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2024-Present</span>
-						<h2>Graduate Research Assistant</h2>
-						<span class="position">Lamar University</span>
-						<p class="mt-4">Lamar University is a public institution known for research, innovation, and hands-on learning. It offers diverse programs, fostering student success and leadership in various industries. 
-							<ul>
-								<li>Executed research on AI integration in military tactics.</li>
-								<li>Designed research methodologies for AI's societal effects.</li>
-								<li>Conducted literature reviews on AI applications in defense.</li>
-							</ul>
-						</p>
-					</div>
+		<!-- Work Experience Section -->
+<div class="row">
+    <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">June 2025–Present</span>
+            <h2>SAP IT Intern – Financial & Procurement Analytics</h2>
+            <span class="position">Amplify Cell Technologies, Byhalia – MS</span>
+            <p class="mt-4">Amplify Cell Technologies is building the largest U.S. commercial battery cell manufacturing plant for heavy‑ and medium‑duty vehicles in Byhalia, MS :contentReference[oaicite:1]{index=1}.
+                <ul>
+                    <li>Customized 6+ SAC dashboards for OPEX, CAPEX, and cost center planning, improving planning cycle accuracy by 25% across departments.</li>
+                    <li>Supported SAP S/4HANA procurement configuration by analyzing vendor proposals and onboarding flows, accelerating decision‑making by 20%.</li>
+                    <li>Documented cross‑module workflows between finance, procurement, and logistics teams, enhancing SAP training materials and integration clarity.</li>
+                </ul>
+            </p>
+        </div>
+    </div>
 
-				</div>
+    <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">2024–Present</span>
+            <h2>Graduate Research Assistant</h2>
+            <span class="position">Lamar University</span>
+            <p class="mt-4">Lamar University is a public institution known for research, innovation, and hands‑on learning. It offers diverse programs, fostering student success and leadership in various industries.
+                <ul>
+                    <li>Executed research on AI integration in military tactics.</li>
+                    <li>Designed research methodologies for AI's societal effects.</li>
+                    <li>Conducted literature reviews on AI applications in defense.</li>
+                </ul>
+            </p>
+        </div>
+    </div>
+</div>
 
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-2023</span>
-						<h2>Junior Data Analyst</h2>
-						<span class="position">Meta Link</span>
-						<p class="mt-4">Meta Link Pvt. Ltd. is a leading IT solutions provider specializing in system development, maintenance, and data analytics for businesses in Nepal. 
-							<ul>
-								<li>Accelerated project completion by 20% through predictive modeling and data analytics techniques, optimizing project
-timelines and operational efficiency.</li>
-								<li>Leveraged Python and SQL for comprehensive data analysis, providing technical support, troubleshooting, and collaborating
-with cross-functional teams to design system enhancements.</li>
-								<li>Streamlined documentation processes by creating system user guides, procedure manuals, and user guidelines, resulting in a
-25% reduction in user errors.</li>
+<div class="row">
+    <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">2021–2023</span>
+            <h2>Junior Data Analyst</h2>
+            <span class="position">Meta Link</span>
+            <p class="mt-4">Meta Link Pvt. Ltd. is a leading IT solutions provider specializing in system development, maintenance, and data analytics for businesses in Nepal.
+                <ul>
+                    <li>Accelerated project completion by 20% through predictive modeling and data analytics techniques, optimizing project timelines and operational efficiency.</li>
+                    <li>Leveraged Python and SQL for comprehensive data analysis, providing technical support, troubleshooting, and collaborating with cross‑functional teams to design system enhancements.</li>
+                    <li>Streamlined documentation processes by creating system user guides, procedure manuals, and user guidelines, resulting in a 25% reduction in user errors.</li>
+                </ul>
+            </p>
+        </div>
+    </div>
+</div>
+
 							</ul>
 						</p>
 					</div>
