--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
   <div class="col-md-4">
     <div class="resume-wrap ftco-animate">
       <span class="date">June 2025–Present</span>
-      <h2>SAP IT Intern – Financial & Procurement Analytics</h2>
+      <h2>SAP IT Intern </h2>
       <span class="position">Amplify Cell Technologies, Byhalia – MS</span>
       <p class="mt-4">Amplify Cell Technologies is building the largest U.S. commercial battery cell manufacturing plant for heavy‑ and medium‑duty vehicles.
         <ul>
