Update typing animation with new SAP certifications
Added new SAP certifications to the typing animation texts.

--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Business Data Analyst  ',
-						'SAP TS410 Business Process Integration Certified',
+						'SAP Certified – Business Data Cloud (BDC)',
+						'SAP Certified – SAP Analytics Cloud (SAC)',
+						'SAP Certified – S/4HANA Business Process Integration (TS410)',
 						'   ',
 						];
 
