Add certifications section to index.html

--- a/index.html
+++ b/index.html
@@ -751,6 +751,45 @@
   </div> <!-- CLOSE container -->
 </section>
 
+<section class="ftco-section" id="certifications-section">
+  <div class="container">
+    <div class="row justify-content-center mb-5 pb-3">
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <h1 class="big big-2">Certifications</h1>
+        <h2 class="mb-4">SAP Certifications</h2>
+        <p>Click a badge to verify the credential on Credly.</p>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+
+      <!-- SAP Business Data Cloud -->
+      <div class="col-md-4 text-center">
+        <a href="https://www.credly.com/earner/earned/badge/99384e7b-0e0e-4fba-9866-ca70d69d6ef8" target="_blank" rel="noopener noreferrer">
+          <img src="images/bdc-badge.png" class="img-fluid zoom-effect" alt="SAP Certified Associate – Business Data Cloud">
+        </a>
+        <h5 class="mt-3">SAP Certified Associate – Business Data Cloud</h5>
+      </div>
+
+      <!-- SAP Analytics Cloud -->
+      <div class="col-md-4 text-center">
+        <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank" rel="noopener noreferrer">
+          <img src="images/sac-badge.png" class="img-fluid zoom-effect" alt="SAP Certified Associate – SAP Analytics Cloud">
+        </a>
+        <h5 class="mt-3">SAP Certified Associate – SAP Analytics Cloud (Data Analyst)</h5>
+      </div>
+
+      <!-- SAP TS410 -->
+      <div class="col-md-4 text-center">
+        <a href="https://www.credly.com/badges/cf4ecc7a-bc1c-45aa-949e-c01934d6a705" target="_blank" rel="noopener noreferrer">
+          <img src="images/ts410-badge.png" class="img-fluid zoom-effect" alt="SAP Certified Associate – Business Process Integration with SAP S/4HANA">
+        </a>
+        <h5 class="mt-3">SAP Certified Associate – Business Process Integration (TS410)</h5>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 <!-- Volunteer Section Start -->
 <section class="ftco-section" id="volunteering-section">
