Update SAP badge image source in index.html

--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
       <!-- SAP Analytics Cloud -->
       <div class="col-md-4 text-center">
         <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank" rel="noopener noreferrer">
-          <img src="images/sac-badge.png" class="img-fluid zoom-effect" alt="SAP Certified Associate – SAP Analytics Cloud">
+          <img src="images/sac-badge2.png" class="img-fluid zoom-effect" alt="SAP Certified Associate – SAP Analytics Cloud">
         </a>
         <h5 class="mt-3">SAP Certified Associate – SAP Analytics Cloud (Data Analyst)</h5>
       </div>
