--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
-				<li class="nav-item"><a href="#certifications-section" class="nav-link"><span>Certifications</span></a></li>
+				<li class="nav-item"><a href="#certification-section" class="nav-link"><span>Certification</span></a></li>
 		  <li class="nav-item"><a href="#volunteering-section" class="nav-link"><span>Volunteering</span></a></li>
 
 	        </ul>
@@ -751,12 +751,12 @@
   </div> <!-- CLOSE container -->
 </section>
 
-<section class="ftco-section" id="certifications-section">
+<section class="ftco-section" id="certification-section">
   <div class="container">
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 heading-section text-center ftco-animate">
-        <h1 class="big big-2">Certifications</h1>
-        <h2 class="mb-4">SAP Certifications</h2>
+        <h1 class="big big-2">Certification</h1>
+        <h2 class="mb-4">SAP Certification</h2>
         <p>Click a badge to verify the credential on Credly.</p>
       </div>
     </div>
