--- a/index.html
+++ b/index.html
@@ -791,45 +791,46 @@
   </div> <!-- CLOSE container -->
 </section>
 
-<section class="ftco-section" id="certification-section">
-  <div class="container">
-    <div class="row justify-content-center mb-5 pb-3">
-      <div class="col-md-7 heading-section text-center ftco-animate">
-        <h1 class="big big-2">Certification</h1>
-        <h2 class="mb-4">SAP Certification</h2>
-        <p>Click a badge to verify the credential on Credly.</p>
+<div class="row justify-content-center">
+
+  <!-- BDC -->
+  <div class="col-md-4 text-center">
+    <div class="cert-card">
+      <a href="https://www.credly.com/earner/earned/badge/99384e7b-0e0e-4fba-9866-ca70d69d6ef8" target="_blank">
+        <img src="images/bdc-badge.png" class="cert-badge" alt="SAP Business Data Cloud">
+      </a>
+      <div class="cert-title">
+        SAP Certified Associate – Business Data Cloud
       </div>
-    </div>
-
-    <div class="row justify-content-center">
-
-      <!-- SAP Business Data Cloud -->
-      <div class="col-md-4 text-center">
-        <a href="https://www.credly.com/earner/earned/badge/99384e7b-0e0e-4fba-9866-ca70d69d6ef8" target="_blank" rel="noopener noreferrer">
-          <img src="images/bdc-badge.png" class="img-fluid zoom-effect" alt="SAP Certified Associate – Business Data Cloud">
-        </a>
-        <h5 class="mt-3">SAP Certified Associate – Business Data Cloud</h5>
-      </div>
-
-      <!-- SAP Analytics Cloud -->
-      <div class="col-md-4 text-center">
-        <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank" rel="noopener noreferrer">
-          <img src="images/sac-badge2.png" class="img-fluid zoom-effect" alt="SAP Certified Associate – SAP Analytics Cloud">
-        </a>
-        <h5 class="mt-3">SAP Certified Associate – SAP Analytics Cloud (Data Analyst)</h5>
-      </div>
-
-      <!-- SAP TS410 -->
-      <div class="col-md-4 text-center">
-        <a href="https://www.credly.com/badges/cf4ecc7a-bc1c-45aa-949e-c01934d6a705" target="_blank" rel="noopener noreferrer">
-          <img src="images/ts410-badge.png" class="img-fluid zoom-effect" alt="SAP Certified Associate – Business Process Integration with SAP S/4HANA">
-        </a>
-        <h5 class="mt-3">SAP Certified Associate – Business Process Integration (TS410)</h5>
-      </div>
-
     </div>
   </div>
-</section>
+
+  <!-- SAC -->
+  <div class="col-md-4 text-center">
+    <div class="cert-card">
+      <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank">
+        <img src="images/sac-badge2.png" class="cert-badge" alt="SAP Analytics Cloud">
+      </a>
+      <div class="cert-title">
+        SAP Certified Associate – SAP Analytics Cloud
+      </div>
+    </div>
+  </div>
+
+  <!-- TS410 -->
+  <div class="col-md-4 text-center">
+    <div class="cert-card">
+      <a href="https://www.credly.com/badges/cf4ecc7a-bc1c-45aa-949e-c01934d6a705" target="_blank">
+        <img src="images/ts410-badge.png" class="cert-badge" alt="SAP TS410">
+      </a>
+      <div class="cert-title">
+        SAP Certified Associate – Business Process Integration (TS410)
+      </div>
+    </div>
+  </div>
+
+</div>
+
 
 <!-- Volunteer Section Start -->
 <section class="ftco-section" id="volunteering-section">
