--- a/index.html
+++ b/index.html
@@ -110,45 +110,39 @@
 }
 
 /* ==============================
-   CERTIFICATION SECTION STYLING
+   CERTIFICATION SECTION
 ================================ */
 
 #certifications-section {
-  background: #f9f9f9;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  background: #000;
+  padding: 120px 0;
 }
 
 .cert-card {
-  background: #ffffff;
-  padding: 30px;
-  border-radius: 16px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+  text-align: center;
   transition: all 0.3s ease;
-  margin-bottom: 30px;
-}
-
-.cert-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 20px 40px rgba(0,0,0,0.15);
 }
 
 .cert-badge {
-  max-width: 320px;   /* controls badge size */
   width: 100%;
+  max-width: 520px;   /* controls image size */
   height: auto;
-  transition: transform 0.3s ease;
+  border-radius: 14px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .cert-card:hover .cert-badge {
-  transform: scale(1.05);
+  transform: scale(1.08);
+  box-shadow: 0 25px 50px rgba(0, 150, 255, 0.35);
 }
 
 .cert-title {
   font-weight: 600;
   margin-top: 20px;
   font-size: 18px;
+  color: #ffffff;
 }
+
 
 </style>
 
