--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   transform: scale(1.1);
 }
 
-/* ==============================
+//* ==============================
    CERTIFICATION SECTION
 ================================ */
 
@@ -125,12 +125,8 @@
 
 .cert-badge {
   width: 100%;
-  max-width: 750px;
+  max-width: 750px;  /* image size */
   height: auto;
-}
-
-}
-
   border-radius: 14px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
