Change certifications section background color to white

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 ================================ */
 
 #certifications-section {
-  background: #000;
+  background: #ffffff;
   padding: 120px 0;
 }
 
