Update certification badge images in index.html

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
   <div class="col-md-4 text-center">
     <div class="cert-card">
       <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank">
-        <img src="images/sac-badge2.png" class="cert-badge" alt="SAP Analytics Cloud">
+        <img src="images/sac-badge3.png" class="cert-badge" alt="SAP Analytics Cloud">
       </a>
       <div class="cert-title">
         SAP Certified Associate – SAP Analytics Cloud
@@ -815,7 +815,7 @@
   <div class="col-md-4 text-center">
     <div class="cert-card">
       <a href="https://www.credly.com/badges/cf4ecc7a-bc1c-45aa-949e-c01934d6a705" target="_blank">
-        <img src="images/ts410-badge.png" class="cert-badge" alt="SAP TS410">
+        <img src="images/ts410-badge3.png" class="cert-badge" alt="SAP TS410">
       </a>
       <div class="cert-title">
         SAP Certified Associate – Business Process Integration (TS410)
