--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
    CERTIFICATION SECTION
 ================================ */
 
-#certifications-section {
+#certification-section {
   background: #ffffff;
   padding: 120px 0;
 }
