--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 ================================ */
 
 #certification-section {
-  background: #ffffff;
+  background: #111111;
   padding: 120px 0;
 }
 
