--- a/index.html
+++ b/index.html
@@ -784,7 +784,17 @@
     </div> <!-- CLOSE row -->
   </div> <!-- CLOSE container -->
 </section>
+<section class="ftco-section" id="certification-section">
+  <div class="container">
 
+    <!-- Heading -->
+    <div class="row justify-content-center mb-5 pb-3">
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <h1 class="big big-2">Certification</h1>
+        <h2 class="mb-4">Professional Certifications</h2>
+        <p>Click a badge to verify on Credly.</p>
+      </div>
+    </div>
 <div class="row justify-content-center">
 
   <!-- BDC -->
