--- a/index.html
+++ b/index.html
@@ -797,44 +797,45 @@
       </div>
     </div>
 
-    <!-- Certification Cards -->
-    <div class="row justify-content-center">
+   <div class="row justify-content-center">
 
-      <!-- BDC -->
-      <div class="col-md-4 text-center">
-        <div class="cert-card">
-          <a href="https://www.credly.com/earner/earned/badge/99384e7b-0e0e-4fba-9866-ca70d69d6ef8" target="_blank">
-            <img src="images/bdc-badge.png" class="cert-badge" alt="SAP Business Data Cloud">
-          </a>
-          <div class="cert-title">SAP Certified Associate – Business Data Cloud</div>
-        </div>
+  <!-- BDC -->
+  <div class="col-12 text-center mb-5">
+    <div class="cert-card">
+      <a href="https://www.credly.com/earner/earned/badge/99384e7b-0e0e-4fba-9866-ca70d69d6ef8" target="_blank">
+        <img src="images/bdc-badge.png" class="cert-badge" alt="SAP Business Data Cloud">
+      </a>
+      <div class="cert-title">
+        SAP Certified Associate – Business Data Cloud
       </div>
-
-      <!-- SAC -->
-      <div class="col-md-4 text-center">
-        <div class="cert-card">
-          <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank">
-            <img src="images/sac-badge3.png" class="cert-badge" alt="SAP Analytics Cloud">
-          </a>
-          <div class="cert-title">SAP Certified Associate – SAP Analytics Cloud</div>
-        </div>
-      </div>
-
-      <!-- TS410 -->
-      <div class="col-md-4 text-center">
-        <div class="cert-card">
-          <a href="https://www.credly.com/badges/cf4ecc7a-bc1c-45aa-949e-c01934d6a705" target="_blank">
-            <img src="images/ts410-badge3.png" class="cert-badge" alt="SAP TS410">
-          </a>
-          <div class="cert-title">SAP Certified Associate – Business Process Integration (TS410)</div>
-        </div>
-      </div>
-
     </div>
-
   </div>
-</section>
-<!-- CERTIFICATION SECTION END -->
+
+  <!-- SAC -->
+  <div class="col-12 text-center mb-5">
+    <div class="cert-card">
+      <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank">
+        <img src="images/sac-badge3.png" class="cert-badge" alt="SAP Analytics Cloud">
+      </a>
+      <div class="cert-title">
+        SAP Certified Associate – SAP Analytics Cloud
+      </div>
+    </div>
+  </div>
+
+  <!-- TS410 -->
+  <div class="col-12 text-center mb-5">
+    <div class="cert-card">
+      <a href="https://www.credly.com/badges/cf4ecc7a-bc1c-45aa-949e-c01934d6a705" target="_blank">
+        <img src="images/ts410-badge3.png" class="cert-badge" alt="SAP TS410">
+      </a>
+      <div class="cert-title">
+        SAP Certified Associate – Business Process Integration (TS410)
+      </div>
+    </div>
+  </div>
+
+</div>
 
 
 <!-- Volunteer Section Start -->
