Refactor certification cards layout in index.html

--- a/index.html
+++ b/index.html
@@ -800,11 +800,12 @@
       </div>
     </div>
 
+    <!-- 3 Cards in One Row (LIKE YOUR PHOTO) -->
     <div class="row justify-content-center">
-      
+
       <!-- BDC -->
-      <div class="col-12 text-center mb-5">
-        <div class="cert-card">
+      <div class="col-md-4 d-flex ftco-animate">
+        <div class="cert-card w-100">
           <a href="https://www.credly.com/earner/earned/badge/99384e7b-0e0e-4fba-9866-ca70d69d6ef8" target="_blank">
             <img src="images/bdc-badge.png" class="cert-badge" alt="SAP Business Data Cloud">
           </a>
@@ -813,8 +814,8 @@
       </div>
 
       <!-- SAC -->
-      <div class="col-12 text-center mb-5">
-        <div class="cert-card">
+      <div class="col-md-4 d-flex ftco-animate">
+        <div class="cert-card w-100">
           <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank">
             <img src="images/sac-badge3.png" class="cert-badge" alt="SAP Analytics Cloud">
           </a>
@@ -823,8 +824,8 @@
       </div>
 
       <!-- TS410 -->
-      <div class="col-12 text-center mb-5">
-        <div class="cert-card">
+      <div class="col-md-4 d-flex ftco-animate">
+        <div class="cert-card w-100">
           <a href="https://www.credly.com/badges/cf4ecc7a-bc1c-45aa-949e-c01934d6a705" target="_blank">
             <img src="images/ts410-badge3.png" class="cert-badge" alt="SAP TS410">
           </a>
@@ -833,10 +834,10 @@
       </div>
 
     </div>
-
   </div>
 </section>
 <!-- CERTIFICATION SECTION END -->
+
 
 
 <!-- Volunteer Section Start -->
