--- a/index.html
+++ b/index.html
@@ -800,7 +800,8 @@
     <div class="row justify-content-center">
 
       <!-- BDC -->
-      <div class="col-md-4 d-flex ftco-animate">
+    <div class="col-lg-4 col-md-6 d-flex ftco-animate">
+
         <div class="cert-card w-100">
           <a href="https://www.credly.com/earner/earned/badge/99384e7b-0e0e-4fba-9866-ca70d69d6ef8" target="_blank">
             <img src="images/bdc-badge.png" class="cert-badge" alt="SAP Business Data Cloud">
@@ -810,7 +811,8 @@
       </div>
 
       <!-- SAC -->
-      <div class="col-md-4 d-flex ftco-animate">
+      <div class="col-lg-4 col-md-6 d-flex ftco-animate">
+
         <div class="cert-card w-100">
           <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank">
             <img src="images/sac-badge3.png" class="cert-badge" alt="SAP Analytics Cloud">
@@ -820,7 +822,8 @@
       </div>
 
       <!-- TS410 -->
-      <div class="col-md-4 d-flex ftco-animate">
+     <div class="col-lg-4 col-md-6 d-flex ftco-animate">
+
         <div class="cert-card w-100">
           <a href="https://www.credly.com/badges/cf4ecc7a-bc1c-45aa-949e-c01934d6a705" target="_blank">
             <img src="images/ts410-badge3.png" class="cert-badge" alt="SAP TS410">
