Adjust styles for certification section and cards

--- a/index.html
+++ b/index.html
@@ -118,30 +118,34 @@
   padding: 120px 0;
 }
 
+#certification-section .container {
+  max-width: 1600px;  /* makes entire row wider */
+}
+
 .cert-card {
   text-align: center;
-  padding: 10px;
+  padding: 20px;
 }
 
 .cert-badge {
-  width: 100%;
+  width: 100%;   /* fill full column */
   height: auto;
-  border-radius: 14px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  display: block;
+  border-radius: 16px;
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
 
 .cert-card:hover .cert-badge {
-  transform: scale(1.06);
-  box-shadow: 0 25px 50px rgba(0, 150, 255, 0.35);
+  transform: scale(1.08);
+  box-shadow: 0 30px 70px rgba(0, 150, 255, 0.45);
 }
 
 .cert-title {
   font-weight: 600;
-  margin-top: 18px;
-  font-size: 18px;
+  margin-top: 20px;
+  font-size: 19px;
   color: #ffffff;
 }
+
 
 </style>
 
