--- a/index.html
+++ b/index.html
@@ -789,9 +789,8 @@
 </section>
 <!-- CERTIFICATION SECTION START -->
 <section class="ftco-section" id="certification-section">
-  <div class="container">
+  <div class="container-fluid px-4">
 
-    <!-- Heading -->
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 heading-section text-center ftco-animate">
         <h1 class="big big-2">Certification</h1>
@@ -800,12 +799,10 @@
       </div>
     </div>
 
-    <!-- 3 Cards in One Row (LIKE YOUR PHOTO) -->
-    <div class="row justify-content-center">
+    <div class="row justify-content-center g-4">
 
       <!-- BDC -->
-    <div class="col-lg-4 col-md-6 d-flex ftco-animate">
-
+      <div class="col-xl-6 col-lg-6 col-md-10 d-flex ftco-animate">
         <div class="cert-card w-100">
           <a href="https://www.credly.com/earner/earned/badge/99384e7b-0e0e-4fba-9866-ca70d69d6ef8" target="_blank">
             <img src="images/bdc-badge.png" class="cert-badge" alt="SAP Business Data Cloud">
@@ -815,8 +812,7 @@
       </div>
 
       <!-- SAC -->
-      <div class="col-lg-4 col-md-6 d-flex ftco-animate">
-
+      <div class="col-xl-6 col-lg-6 col-md-10 d-flex ftco-animate">
         <div class="cert-card w-100">
           <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank">
             <img src="images/sac-badge3.png" class="cert-badge" alt="SAP Analytics Cloud">
@@ -826,8 +822,7 @@
       </div>
 
       <!-- TS410 -->
-     <div class="col-lg-4 col-md-6 d-flex ftco-animate">
-
+      <div class="col-xl-6 col-lg-6 col-md-10 d-flex ftco-animate">
         <div class="cert-card w-100">
           <a href="https://www.credly.com/badges/cf4ecc7a-bc1c-45aa-949e-c01934d6a705" target="_blank">
             <img src="images/ts410-badge3.png" class="cert-badge" alt="SAP TS410">
@@ -840,6 +835,7 @@
   </div>
 </section>
 <!-- CERTIFICATION SECTION END -->
+
 
 
 
