--- a/index.html
+++ b/index.html
@@ -118,33 +118,70 @@
   padding: 120px 0;
 }
 
-#certification-section .container {
-  max-width: 1600px;  /* makes entire row wider */
+/* NEW: because we changed HTML to container-fluid */
+#certification-section .container-fluid {
+  max-width: 1700px;
+  margin: 0 auto;
 }
 
+/* card wrapper */
 .cert-card {
   text-align: center;
-  padding: 20px;
+  padding: 18px;
 }
 
+/* the badge image */
 .cert-badge {
-  width: 100%;   /* fill full column */
+  display: block;
+  margin: 0 auto;
+  width: 100%;          /* fills the column */
+  max-width: 820px;     /* controls how big it can get */
   height: auto;
   border-radius: 16px;
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
+  transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
 
+/* hover effect */
 .cert-card:hover .cert-badge {
-  transform: scale(1.08);
-  box-shadow: 0 30px 70px rgba(0, 150, 255, 0.45);
+  transform: scale(1.06);
+  box-shadow: 0 28px 70px rgba(0, 150, 255, 0.45);
 }
 
+/* title under each badge */
 .cert-title {
   font-weight: 600;
-  margin-top: 20px;
-  font-size: 19px;
+  margin-top: 18px;
+  font-size: 18px;
   color: #ffffff;
+  line-height: 1.35;
 }
+
+/* RESPONSIVE: make it look perfect on small screens */
+@media (max-width: 991.98px) {
+  #certification-section {
+    padding: 80px 0;
+  }
+  .cert-badge {
+    max-width: 700px;
+  }
+  .cert-title {
+    font-size: 17px;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .cert-card {
+    padding: 10px;
+  }
+  .cert-badge {
+    max-width: 100%;
+    border-radius: 12px;
+  }
+  .cert-title {
+    font-size: 16px;
+  }
+}
+
 
 
 </style>
