--- a/index.html
+++ b/index.html
@@ -826,8 +826,9 @@
 </section>
 <!-- CERTIFICATION SECTION START -->
 <section class="ftco-section" id="certification-section">
-  <div class="container-fluid px-4">
+  <div class="container-fluid">
 
+    <!-- Heading -->
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 heading-section text-center ftco-animate">
         <h1 class="big big-2">Certification</h1>
@@ -836,42 +837,51 @@
       </div>
     </div>
 
-    <div class="row justify-content-center g-4">
+    <!-- BADGES ROW -->
+    <div class="row justify-content-center align-items-center">
 
       <!-- BDC -->
-      <div class="col-xl-6 col-lg-6 col-md-10 d-flex ftco-animate">
-        <div class="cert-card w-100">
+      <div class="col-lg-4 col-md-4 col-12 d-flex justify-content-center ftco-animate">
+        <div class="cert-card">
           <a href="https://www.credly.com/earner/earned/badge/99384e7b-0e0e-4fba-9866-ca70d69d6ef8" target="_blank">
             <img src="images/bdc-badge.png" class="cert-badge" alt="SAP Business Data Cloud">
           </a>
-          <div class="cert-title">SAP Certified Associate – Business Data Cloud</div>
+          <div class="cert-title">
+            SAP Certified Associate – Business Data Cloud
+          </div>
         </div>
       </div>
 
       <!-- SAC -->
-      <div class="col-xl-6 col-lg-6 col-md-10 d-flex ftco-animate">
-        <div class="cert-card w-100">
+      <div class="col-lg-4 col-md-4 col-12 d-flex justify-content-center ftco-animate">
+        <div class="cert-card">
           <a href="https://www.credly.com/badges/f8e77581-0b88-416f-a537-592aa4b3c4d7" target="_blank">
             <img src="images/sac-badge3.png" class="cert-badge" alt="SAP Analytics Cloud">
           </a>
-          <div class="cert-title">SAP Certified Associate – SAP Analytics Cloud</div>
+          <div class="cert-title">
+            SAP Certified Associate – SAP Analytics Cloud
+          </div>
         </div>
       </div>
 
       <!-- TS410 -->
-      <div class="col-xl-6 col-lg-6 col-md-10 d-flex ftco-animate">
-        <div class="cert-card w-100">
+      <div class="col-lg-4 col-md-4 col-12 d-flex justify-content-center ftco-animate">
+        <div class="cert-card">
           <a href="https://www.credly.com/badges/cf4ecc7a-bc1c-45aa-949e-c01934d6a705" target="_blank">
             <img src="images/ts410-badge3.png" class="cert-badge" alt="SAP TS410">
           </a>
-          <div class="cert-title">SAP Certified Associate – Business Process Integration (TS410)</div>
+          <div class="cert-title">
+            SAP Certified Associate – Business Process Integration (TS410)
+          </div>
         </div>
       </div>
 
     </div>
+
   </div>
 </section>
 <!-- CERTIFICATION SECTION END -->
+
 
 
 
