--- a/index.html
+++ b/index.html
@@ -150,6 +150,35 @@
   font-size: 16px;
   color: #ffffff;
 }
+.cert-title {
+  font-weight: 600;
+  margin-top: 14px;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+/* ===== FIX NAVBAR TO TOP + RIGHT CORNER ===== */
+.custom-navbar{
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+}
+
+.custom-navbar .navbar-collapse{
+  justify-content: flex-end !important;
+}
+
+.custom-navbar .navbar-nav{
+  margin-left: auto !important;
+}
+
+body{
+  padding-top: 80px;
+}
+
+</style>
 
 
 </style>
@@ -157,9 +186,8 @@
 
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-	  
-	  
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
+	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target fixed-top custom-navbar" id="ftco-navbar">
+
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">Anand Kumar Bhagat</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
