--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@ body{
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target fixed-top custom-navbar" id="ftco-navbar">
 
-	    <div class="container">
+	   <div class="container-fluid">
+
 	      <a class="navbar-brand" href="index.html">Anand Kumar Bhagat</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
