--- a/index.html
+++ b/index.html
@@ -177,6 +177,25 @@
 body{
   padding-top: 80px;
 }
+/* ===== FORCE NAVBAR BRAND LEFT + MENU RIGHT ===== */
+#ftco-navbar .container-fluid{
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  width: 100% !important;
+}
+
+#ftco-navbar .navbar-collapse{
+  flex-grow: 0 !important;
+  justify-content: flex-end !important;
+}
+
+#ftco-navbar .navbar-nav{
+  margin-left: auto !important;
+  display: flex !important;
+  justify-content: flex-end !important;
+  width: 100% !important;
+}
 
 </style>
 
