--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 .skill-mf .progress .progress-bar {
   height: .7rem;
-  background-color: #ffbd39;
+  background-color: linear-gradient(90deg, #00C6FF, #0072FF);
 }
 
 
