--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
   background: linear-gradient(90deg, #00C6FF, #0072FF);
 }
 
+.btn.btn-primary {
+  background: #0070F2 !important;
+  border-color: #0070F2 !important;
+}
+
+a, .text-primary {
+  color: #0070F2 !important;
+}
 
 /* Animation styles */
 #typing-animation {
