--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 .skill-mf .progress .progress-bar {
   height: .7rem;
-  background: linear-gradient(90deg, #00C6FF, #0072FF);
+  background: linear-gradient(90deg, #ffbd39, #ffd369);
 }
 
 .btn.btn-primary {
