--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 }
 
 .btn.btn-primary {
-  background: #0070F2 !important;
-  border-color: #0070F2 !important;
+  background: #ffbd39 !important;
+  border-color: #ffbd39  !important;
 }
 
 a, .text-primary {
-  color: #0070F2 !important;
+  color: #ffbd39  !important;
 }
 
 /* Animation styles */
