--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ body{
 
 	
     <section class="ftco-section ftco-no-pb" id="resume-section">
-    	<div class="container">
+  <div class="container-fluid resume-wide">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
@@ -422,7 +422,7 @@ body{
 		
 		<!-- Work Experience Section -->
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-lg-4 col-md-6 col-12 mb-4">
     <div class="resume-wrap ftco-animate">
       <span class="date">June 2025–Present</span>
       <h2>SAP IT Intern </h2>
