--- a/index.html
+++ b/index.html
@@ -204,6 +204,19 @@ body{
   justify-content: flex-end !important;
   width: 100% !important;
 }
+/* Make Resume section wide like Certification */
+#resume-section .resume-wide{
+  max-width: 2100px;
+  margin: 0 auto;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+/* Make experience cards bigger */
+#resume-section .resume-wrap{
+  padding: 30px !important;
+  min-height: 520px;
+}
 
 </style>
 
